[project]
name = "ai-image-generation-comparison"
version = "0.1.0"
description = "A project to compare different AI image generation models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "image>=1.5.33",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
]
